Fixed Logo Alignment

--- a/website/assets/css/main.scss
+++ b/website/assets/css/main.scss
@@ -3,6 +3,11 @@
 
 @import "mahout";
 
+
+.rounded-circle{
+  height: 200px;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
